--- a/gin_demo/template/insertUser.html
+++ b/gin_demo/template/insertUser.html
@@ -10,6 +10,7 @@
         <input type="number" name="age" placeholder="年龄" maxlength="20">
         <input type="text" name="address" placeholder="地址" maxlength="20">
         <input type="text" name="mobile" placeholder="手机" maxlength="20">
+        <input type="text" name="passwd" placeholder="密码" maxlength="128">
         <select name="sex">
             <option>选择性别</option>
             <option value="male">男</option>
